--- a/src/scss/main/widgets/_from-justia.scss
+++ b/src/scss/main/widgets/_from-justia.scss
@@ -3,7 +3,7 @@
 // ----------------------------------------------------------------------------------------------------------
 
 .w-from-justia {
-   
+
     td {
         text-align: left;
     }
@@ -74,6 +74,8 @@
 
         .block-title {
             margin: 10px 0 5px;
+            min-height: 52px;
+            @include mail-font(16px, 1.3, 700);
         }
 
         // .content-wrapper-table {
